[package]
name = "raf"
version = "0.1.0"
authors = ["monaqa <mogassy@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
structopt = "0.3.21"
itertools = "0.10.0"
serde = { version = "1.0.118", features = ["derive"] }
toml = "0.5.8"
glob = "0.3.0"
chrono = "0.4.19"
log = "0.4.11"
env_logger = "0.8.2"
