[package]
name = "raf"
version = "0.1.0"
authors = ["monaqa <mogassy@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
itertools = "0.10.0"
serde = { version = "1.0.118", features = ["derive"] }
toml = "0.5.8"
glob = "0.3.0"
chrono = "0.4.19"
log = "0.4.11"
env_logger = "0.8.2"
rustyline = "9.1.2"
clap = { version = "3.0.10", features = ["derive"] }
fs_extra = "1.2.0"
dialoguer = "0.10.3"
